<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/start_game_portrait"
    tools:context="cs175.skotturu.dizphone.MainActivity"
    >

    <TextView
        android:id="@+id/HighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/HighScore" />

    <Button
        android:id="@+id/RightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="54dp"
        android:text="@string/RightButton" />

    <TextView
        android:id="@+id/GameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LeftButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:text="@string/GameLabel1"
        android:textSize="@dimen/abc_action_bar_stacked_max_height" />

    <TextView
        android:id="@+id/CurrentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/HighScore"
        android:layout_alignBottom="@+id/HighScore"
        android:layout_centerHorizontal="true"
        android:text="@string/CurrentScore" />

    <Button
        android:id="@+id/LeftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/CurrentScore"
        android:text="@string/LeftButton" />

    <TextView
        android:id="@+id/LivesLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/CurrentScore"
        android:layout_alignBottom="@+id/CurrentScore"
        android:layout_alignRight="@+id/GameLabel"
        android:layout_marginRight="16dp"
        android:text="@string/LivesLeft" />

</RelativeLayout>
