<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs175.skotturu.dizphone.MainActivity" >
        
    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/Settings" 
        android:onClick="settingsbuttonclicked"
        />

    <Button
        android:id="@+id/start_game3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="127dp"
        android:text="@string/Start_Game3" />

    <Button
        android:id="@+id/start_game2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start_game3_button"
        android:layout_centerVertical="true"
        android:text="@string/Start_Game2" />

    <Button
        android:id="@+id/start_game1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_game2_button"
        android:layout_alignLeft="@+id/start_game2_button"
        android:layout_marginBottom="25dp"
        android:text="@string/Start_Game1" />

</RelativeLayout>
