<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs175.skotturu.dizphone.MainActivity" >

    <EditText
        android:id="@+id/edit_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/return_button"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/Player1" >
        <requestFocus />
    </EditText>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SeekBarMidWay"
        android:orientation="horizontal" >
    </RelativeLayout>

    <TextView
        android:id="@+id/SeekBarMidWay"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true"
        android:text="@string/SettingsSeekBarMidWay"
        android:textSize="@dimen/abc_action_bar_title_text_size" />

    <TextView
        android:id="@+id/GameSpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/SeekBarMidWay"
        android:layout_toLeftOf="@+id/return_button"
        android:text="@string/GameSpeed" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SeekBarMidWay"
        android:layout_marginBottom="61dp"
        android:layout_toLeftOf="@+id/edit_player_name"
        android:text="@string/PlayerName" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:text="@string/Return" />

    <SeekBar
        android:id="@+id/game_speed_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:max="19"
        android:progress="9" />

</RelativeLayout>